server-rx-ckcweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-rx-ckcweb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: k8sbrianrada/k8s-rx-ckcweb
          ports:
            - containerPort: 8080
