server-rx-ckcweb-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-rx-ckcweb-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8080
      targetPort: 8080
