ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    -  http:
         paths:
           - path: /
             backend:
               serviceName: frontend-cluster-ip-service
               servicePort: 4000
           - path: /api/
             backend:
               serviceName: server-rx-ckcweb-cluster-ip-service
               servicePort: 8080
